--- a/web/composer.json
+++ b/web/composer.json
@@ -11,5 +11,7 @@
             "email": "ethanlerigab@gmail.com"
         }
     ],
-    "require": {}
+    "require": {
+        "altorouter/altorouter": "^2.0"
+    }
 }
